Language skills re-verified against primary sources; invariant 37 (grep --include drops a named file) (#472)
* Language skills re-verified against primary sources; invariant 37 (grep --include drops a named file)

An early, partial run of the ROADMAP 5 accuracy sweep over the nine language
skills (LAST-VERIFIED unchanged). 158 findings; the 72 High/Medium each went to
an adversarial refuter (1 refuted, all 8 Highs survived); 132 fix items landed,
every new or changed probe run on bad and good fixtures under BSD grep and ugrep.

Highs fixed: Go 1.25 floor out of support; Rust Windows MSRV (CVE-2024-43402);
cppcheck --addon=cert aborts; Kotlin-blind JVM sink probes; uvx pip-audit audits
its own env; TS 7 has no compiler API; .NET secrets probe never read the JSON;
PHP web-server/FPM handoff (two KEV RCE classes).

New gate: invariant 37 plus probes 37/37b and sota-shell-scripting rules/09 5b.
Also: ten bare Dockerfile* globs (zsh NOMATCH), crates.io trusted publishing,
Go description "Go 1.26+" (routing regression 1.000, baseline 1.000).

Record: docs/ADOPTION-LOG.md 2026-09-25; deferred Lows carry triggers.

* Probe 14b: declare a dated routing artifact (check 29's currency test had made the fixture fail on description-editing branches)

* Review fixes: invariant 37 blind spots; Rust/PHP/JVM/libxml2 probes; Go probe list; moved-citation note

* AGENTS.md: 71 probes; sweep-shaped branch reads 68/68

* Regenerate skill map after review fixes